<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etNumero"
        android:layout_width="247dp"
        android:layout_height="58dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/insert"
        android:inputType="number"
        android:maxLength="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInstrucciones" />

    <ImageView
        android:id="@+id/btnNext"
        android:layout_width="159dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNumero"
        app:srcCompat="@drawable/boton" />

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/titulo"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvInstrucciones"
        android:layout_width="302dp"
        android:layout_height="94dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/instrucciones"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitulo" />

    <TextView
        android:id="@+id/tvBoton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnNext"
        app:layout_constraintEnd_toEndOf="@+id/btnNext"
        app:layout_constraintStart_toStartOf="@+id/btnNext"
        app:layout_constraintTop_toTopOf="@+id/btnNext" />

    <TextView
        android:id="@+id/tvVeinte"
        android:layout_width="326dp"
        android:layout_height="68dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/veinte"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnReset" />

    <TextView
        android:id="@+id/tvOrdenados"
        android:layout_width="318dp"
        android:layout_height="92dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvVeinte" />

    <ImageView
        android:id="@+id/btnReset"
        android:layout_width="159dp"
        android:layout_height="35dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btnNext"
        app:layout_constraintTop_toBottomOf="@+id/etNumero"
        app:srcCompat="@drawable/boton" />

    <TextView
        android:id="@+id/tvReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnReset"
        app:layout_constraintEnd_toEndOf="@+id/btnReset"
        app:layout_constraintStart_toStartOf="@+id/btnReset"
        app:layout_constraintTop_toTopOf="@+id/btnReset" />

</androidx.constraintlayout.widget.ConstraintLayout>